--- a/index.html
+++ b/index.html
@@ -23,23 +23,25 @@
         .container {
             max-width: 900px;
             margin: 50px auto;
-            background: rgba(255,255,255,0.8); /* White background with transparency */
-            border-radius: 12px;
-            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
-            padding: 20px;
-            text-align: center;
+            display: flex;
+            gap: 40px; /* Space between the two sections */
             position: relative;
             z-index: 1;
-            display: flex; /* Flex for two equal sections */
-            gap: 20px;
         }
 
         .half {
             flex: 1;
             padding: 20px;
-            border: 2px solid #ff6ec7; /* Border for the boxes */
+            border: 2px solid rgba(255, 110, 199, 0.5); /* Semi-transparent border */
             border-radius: 12px;
-            background: rgba(255, 192, 203, 0.2); /* Soft pink background for sections */
+            background: rgba(255, 192, 203, 0.3); /* Soft pink and more transparent */
+            box-shadow: 0 0 20px rgba(255, 110, 199, 0.3);
+            animation: glow 2s infinite alternate; /* Glow animation */
+            transition: transform 0.3s ease;
+        }
+
+        .half:hover {
+            transform: translateY(-5px); /* Small hover effect */
         }
 
         h2 {
@@ -60,6 +62,26 @@
             margin: 0 auto 20px;
             border: 3px solid #ff6ec7; /* Pink border */
             box-shadow: 0 0 10px #ff6ec7;
+        }
+
+        .social-buttons {
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+        }
+
+        .social-buttons a {
+            display: inline-block;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            overflow: hidden;
+        }
+
+        .social-buttons a img {
+            width: 100%;
+            height: 100%;
         }
 
         footer {
@@ -95,6 +117,11 @@
             0% { transform: translateY(-50px) rotate(0deg); }
             100% { transform: translateY(100vh) rotate(360deg); }
         }
+
+        @keyframes glow {
+            0% { box-shadow: 0 0 10px rgba(255, 110, 199, 0.4); }
+            100% { box-shadow: 0 0 20px rgba(255, 110, 199, 0.8); }
+        }
     </style>
 </head>
 <body>
@@ -108,6 +135,18 @@
             <h2>My Profile</h2>
             <img src="https://xatimg.com/image/xuyFRFvYFPGX.png" alt="Profile Picture" class="avatar">
             <p>Hello, I'm [Your Name], a passionate gamer and anime lover. I spend my time playing games like <strong>Genshin Impact</strong> and <strong>Animal Crossing</strong>, surrounded by beautiful sakura blossoms.</p>
+            <!-- Social Media Buttons -->
+            <div class="social-buttons">
+                <a href="https://twitch.com" target="_blank">
+                    <img src="https://image.flaticon.com/icons/png/512/2111/2111668.png" alt="Twitch">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="https://image.flaticon.com/icons/png/512/2111/2111463.png" alt="Instagram">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="https://image.flaticon.com/icons/png/512/733/733579.png" alt="Twitter">
+                </a>
+            </div>
         </div>
 
         <!-- My Married Section -->
@@ -115,6 +154,18 @@
             <h2>My Married</h2>
             <img src="https://xatimg.com/image/xuyFRFvYFPGX.png" alt="Married Avatar" class="avatar">
             <p>Married to [Partner's Name]. Together, we embark on epic gaming adventures and share our love for anime and gaming culture.</p>
+            <!-- Social Media Buttons -->
+            <div class="social-buttons">
+                <a href="https://twitch.com" target="_blank">
+                    <img src="https://image.flaticon.com/icons/png/512/2111/2111668.png" alt="Twitch">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="https://image.flaticon.com/icons/png/512/2111/2111463.png" alt="Instagram">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="https://image.flaticon.com/icons/png/512/733/733579.png" alt="Twitter">
+                </a>
+            </div>
         </div>
     </div>
     
