--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@
             <p>Hello, I'm [Your Name], a passionate gamer and anime lover. I spend my time playing games like <strong>Genshin Impact</strong> and <strong>Animal Crossing</strong>, surrounded by beautiful sakura blossoms.</p>
             <!-- Social Media Buttons -->
             <div class="social-buttons">
-                <a href="https://twitch.com" target="_blank">
-                    <img src="https://image.flaticon.com/icons/png/512/2111/2111668.png" alt="Twitch">
+                <a href="https://www.twitch.tv/" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/60/Twitch_logo_2019.svg" alt="Twitch">
                 </a>
-                <a href="https://instagram.com" target="_blank">
-                    <img src="https://image.flaticon.com/icons/png/512/2111/2111463.png" alt="Instagram">
+                <a href="https://www.instagram.com/" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
                 </a>
-                <a href="https://twitter.com" target="_blank">
-                    <img src="https://image.flaticon.com/icons/png/512/733/733579.png" alt="Twitter">
+                <a href="https://twitter.com/" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/6/60/Twitter_Logo_as_of_2021.svg" alt="Twitter">
                 </a>
             </div>
         </div>
@@ -156,14 +156,14 @@
             <p>Married to [Partner's Name]. Together, we embark on epic gaming adventures and share our love for anime and gaming culture.</p>
             <!-- Social Media Buttons -->
             <div class="social-buttons">
-                <a href="https://twitch.com" target="_blank">
-                    <img src="https://image.flaticon.com/icons/png/512/2111/2111668.png" alt="Twitch">
+                <a href="https://www.twitch.tv/" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/60/Twitch_logo_2019.svg" alt="Twitch">
                 </a>
-                <a href="https://instagram.com" target="_blank">
-                    <img src="https://image.flaticon.com/icons/png/512/2111/2111463.png" alt="Instagram">
+                <a href="https://www.instagram.com/" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
                 </a>
-                <a href="https://twitter.com" target="_blank">
-                    <img src="https://image.flaticon.com/icons/png/512/733/733579.png" alt="Twitter">
+                <a href="https://twitter.com/" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/6/60/Twitter_Logo_as_of_2021.svg" alt="Twitter">
                 </a>
             </div>
         </div>
@@ -171,7 +171,7 @@
     
     <!-- Footer Section -->
     <footer>
-        <p>© 2024 Sakura Gamer | <a href="#">Contact</a></p>
+        <p>© 2024 Sakura Gamer | Copyright Sephiroth | <a href="#">Contact</a></p>
     </footer>
 
     <script>
