--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    // Copyright Notice
+// All images and code contained in this project are the sole property of Seph (1538769249).
+// They may not be used, copied, or redistributed in any form unless purchased directly from Seph (1538769249).
+// Usage is strictly limited to xat.com and requires the explicit approval of the owner.
+// Unauthorized use is prohibited and subject to legal action.
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sakura Anime Gamer Girl</title>
