--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             padding: 20px;
             border: 2px solid rgba(255, 110, 199, 0.5); /* Semi-transparent border */
             border-radius: 12px;
-            background: rgba(255, 192, 203, 0.3); /* Soft pink and more transparent */
+            background: rgba(255, 192, 203, 0.45); /* Increased opacity for better readability */
             box-shadow: 0 0 20px rgba(255, 110, 199, 0.3);
             animation: glow 2s infinite alternate; /* Glow animation */
             transition: transform 0.3s ease;
@@ -138,7 +138,7 @@
             <!-- Social Media Buttons -->
             <div class="social-buttons">
                 <a href="https://www.twitch.tv/" target="_blank">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/60/Twitch_logo_2019.svg" alt="Twitch">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Twitch_icon.png" alt="Twitch">
                 </a>
                 <a href="https://www.instagram.com/" target="_blank">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
@@ -157,7 +157,7 @@
             <!-- Social Media Buttons -->
             <div class="social-buttons">
                 <a href="https://www.twitch.tv/" target="_blank">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/60/Twitch_logo_2019.svg" alt="Twitch">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Twitch_icon.png" alt="Twitch">
                 </a>
                 <a href="https://www.instagram.com/" target="_blank">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
@@ -171,7 +171,7 @@
     
     <!-- Footer Section -->
     <footer>
-        <p>© 2024 Copyright Sephiroth <a href="#">Contact</a></p>
+        <p>© 2024 Sakura Gamer | Copyright Sephiroth | <a href="#">Contact</a></p>
     </footer>
 
     <!-- Copyright Notice
